# resonant-learning

./: .gitignore  README.md  environment.yml  requirements.txt  setup.cfg
classes/: AttractorGraph.py  AttractorGraphWithPhase.py  Graph.py  HomGraph.py  SFGraph.py  sighelp.py
network_evolution/: dict.c  dict.h  helpers.c  helpers.h  main.py  quickplot.py  scoring  scoring.c  scoring.h  scoring_function.c  scoring_function.pyx  setup.py  test.c  test_scoring.py
network_evolution/odyssey_scripts/: cleanup_directory.sh  cleanup_files.py  cleanup_files_passed.py  consolidate.sh  launch_mult_jobs.sh  non_odyssey_multiple_runs.sh  run_individual_batch.sh  run_jobs.sh  run_jobs_main_fig.sh  temp.sh
network_evolution/output_networks/: Multiplex_Evolution_2019-10-27_20:48:49.json  Multiplex_Evolution_2019-10-27_20:50:11.json  Multiplex_Evolution_2019-10-27_20:53:58.json
notebooks/: oscillation_attractor_stats.ipynb  oscillation_attractor_timescales.ipynb  oscillation_attractors.ipynb  oscillation_clustering.ipynb  oscillation_heatmaps.ipynb  oscillation_mapping.ipynb  oscilliation_attractor_timescales.ipynb  sin_waves_graphic.ipynb
scripts/: attractor_mapping.py  attractor_mapping_control.py  attractor_mapping_script.py  attractor_mapping_script_control.py  attractor_potential.py  attractor_potential_script.py  cycles_script.py  draw_sf_graph.py  order_chaos_transition.py  phase_robustness.py  sf_graph_draw.py  test_graphs.py
src/resonant_learning.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/resonant_learning/attractors/: AttractorGraph.py  (+1 more)
(+6 files in other folders)
