[metadata]
name = resonant_learning 
version = <version number: 0.0.1
#license = <license name, e.g. MIT>
description = Resonant learning in scale free networks
long_description = file: README.md
author = Samuel Goldman
#author_email = 
classifiers=

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
   numpy
   pandas
   joblib

[options.extras_require]
dev =
    jupyterlab

[options.packages.find]
where=src

